# cpp_plugin

./: CMakeLists.txt  main.cpp
pluginManager/: plugin_base.h  plugin_manager.cpp  plugin_manager.h
plugins/plugin_a/: CMakeLists.txt  plugin_a.cpp  plugin_a.h
plugins/plugin_b/: CMakeLists.txt  plugin_b.cpp  plugin_b.h
